@@ -44,7 +44,8 @@ static CONFIG Vars[] = {
     { "strict_channels", VAR_TYPE_BOOL, OPTION_STRICT_CHANNELS, 0 },
     { "server_queue_length", VAR_TYPE_INT, UL &Server_Queue_Length, 1048576 },
     { "client_queue_length", VAR_TYPE_INT, UL &Client_Queue_Length, 10240 },
-    { "max_results", VAR_TYPE_INT, UL &Max_Search_Results, 100 }
+    { "max_results", VAR_TYPE_INT, UL &Max_Search_Results, 100 },
+    { "compression_level", VAR_TYPE_INT, UL &Compression_Level, 1 }
 };
 
 static int Vars_Size = sizeof (Vars) / sizeof (CONFIG);
