@@ -36,6 +36,10 @@ fixed resume messages which used broken sequences %ul and %uh
 added max_results server config variable to control the maximum number of
 matches returned on a client search
 
+added compressed data packet (10200) for sending compressed messages between
+servers uzing LZ77 compression.  level of compression is controlled by
+"compression_level" configuration variable
+
 Changes from 0.08
 =================
 
